# order-mgmt-demo

./: .coveragerc  .gitignore  IMPLEMENTATION_PLAN.md  Makefile  PRD.md  README.md  SECURITY_AUDIT.md  TASK_TRACKER.md  docker-compose.mvp.yml  give me the Full Detailed PRD and then the Full De.md  monorepo.code-workspace  requirements-dev.txt  todo.md
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: ci.yml  integration.yml  tests.yml
docs/: ENVIRONMENT.md  SECURITY_VERIFICATION.md  compose_networking.md
docs/archives/: IMPLEMENTATION_PLAN-2025-08-20T0510.md  TASK_TRACKER-2025-08-20T0513.md
infra/postgres/: init-auth.sql  init-orders.sql  seed-admin.sql
scripts/: apply_migrations.py  benchmark.py  e2e_smoke.py  mark_todo_done.py  secrets_check.py  smoke.sh  sql_safety_check.py  update_tracker.py  validate_env.py  wait_for_services.sh
services/auth-service/: Dockerfile  README.md  VALKEY_README.md  alembic.ini  pyproject.toml  pytest.ini
services/auth-service/alembic/: env.py
services/auth-service/alembic/seeds/: seed-auth.sql
services/auth-service/alembic/versions/: 0001_initial.py
services/auth-service/app/: auth.py  bootstrap.py  db.py  main.py  models.py  observability.py  session_store.py  settings.py
services/auth-service/tests/: conftest.py  test_bootstrap.py  test_introspect.py  test_logout_revocation.py  test_password.py  test_refresh_integration.py  test_refresh_rotation.py  test_refresh_schema.py  test_request_id_header.py  test_settings.py  test_settings_validate.py  test_structlog_binding.py  test_token_schema.py  test_valkey_compose_integration.py  test_valkey_integration.py  test_valkey_session_store.py
services/auth-service/types/: psycopg_pool.pyi
services/migrations/: README.md
services/order-service/: .dockerignore  Dockerfile  MIGRATION_NOTE.md  README.md  alembic.ini  pyproject.toml
services/order-service/alembic/: env.py
services/order-service/alembic/versions/: 0001_initial.py
services/order-service/app/: auth_client.py  db.py  main.py  models.py  observability.py  orders.py
services/order-service/tests/: test_auth_client.py  test_authz.py  test_order_validation.py  test_orders.py
services/order-service/types/: psycopg_pool.pyi  pytest.pyi
services/web-gateway/: Dockerfile  README.md  pyproject.toml  pytest.ini
services/web-gateway/app/: auth_proxy.py  main.py  observability.py  routes.py  schemas.py  security.py
services/web-gateway/app/static/: styles.css
services/web-gateway/app/templates/: _order_row.html  admin.html  base.html  login.html  nav.html  order.html  orders.html  register.html
services/web-gateway/tests/: pytest_types.py  test_admin_htmx.py  test_auth_proxy.py  test_csrf_cookies.py  test_csrf_injection_htmx.py  test_invalid_order_input.py  test_logout_flow.py  test_mark_todo_done.py  test_orders_route.py  test_request_id_header.py  test_structlog_binding.py
tests/: test_integration_smoke.py  test_mark_todo_done.py  test_smoke.py
